Update kogito-codegen-modules/kogito-codegen-processes/src/main/java/org/kie/kogito/codegen/process/ProcessCodegen.java
Co-authored-by: Helber Belmiro <helber.belmiro@gmail.com>